--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "terminal21-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/ui",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
@@ -15,10 +16,13 @@
     "@types/node": "^16.18.58",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.5",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
