--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch": "nodemon --verbose --watch 'src' --exec 'npm run build'"
+    "watch": "nodemon --verbose --no-ignore --watch 'src/**/*' --ext 'ts,tsx,js,jsx,css,svg' --exec 'npm run build'"
   },
   "eslintConfig": {
     "extends": [
