--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -32,7 +33,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch": "nodemon --verbose --no-ignore --watch 'src/**/*' --ext 'ts,tsx,js,jsx,css,svg' --exec 'npm run build'",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
+    "type-check": "tsc --noEmit"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.0"
   }
