--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^16.18.58",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "better-react-mathjax": "^2.0.3",
     "express": "^4.18.2",
     "framer-motion": "^10.16.5",
     "http-proxy-middleware": "^2.0.6",
