--- a/package.json
+++ b/package.json
@@ -64,5 +64,10 @@
     "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.0"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!d3-(interpolate|color|scale-chromatic))"
+    ]
   }
 }
