--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "framer-motion": "^10.16.5",
     "http-proxy-middleware": "^2.0.6",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -61,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.0"
